# gdrcopy

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  Makefile.am  README.md  attr.cpp  autogen.sh  basic.cpp  build_packages.sh  common.hpp  config_arch  configure.ac  copybw.cpp  gdrapi.c  gdrapi.h  gdrapi_internal.h  gdrconfig.h  gdrcopy.spec  insmod.sh  insmod_root.sh  install_gdrcopy.sh  kernels.cu  kill.cpp  memcpy_avx.c  memcpy_sse.c  memcpy_sse41.c  sanity.cpp  test_docker.sh  test_invalidation.cpp  validate.cpp
gdrdrv/: Makefile  Module.symvers.nvidia_on_rhel5.x  Module.symvers.nvidia_on_rhel6.x  Module.symvers.nvidia_on_rhel7.x  gdrdrv.c  gdrdrv.h  nv-p2p-dummy.c  path_to_p2p_header.sh
include/: gdrapi.h  gdrconfig.h
init.d/: gdrcopy
scripts/: get_cuda_gencode.sh  makefile-template  test_gdrdrv_HAVE_PROC_OPS.sh  test_gdrdrv_HAVE_VM_FLAGS_SET.sh
src/: .Makefile.am.swp  Makefile  Makefile.am  Makefile.in  common.hpp  copybw.cpp  cuda_wrapper.c  cuda_wrapper.h  gdrapi.c  gdrapi_internal.h  gdrconfig.h  memcpy_avx.c  memcpy_avx2.c  memcpy_avx512.c  memcpy_ls64.c  memcpy_movdir64b.c  memcpy_neon.c  memcpy_sse.c  memcpy_sse41.c  memcpy_st64.c
src/gdrdrv/: Makefile  Makefile.in  gdrdrv.c  gdrdrv.h  nv-p2p-dummy.c
tests/: .Makefile.am.swp  .copybw.cpp.swp  Makefile  Makefile.am  Makefile.in  apiperf.cpp  common.cpp  common.hpp  copybw.cpp  copylat.cpp  pplat.cu  sanity.cpp
tests/testsuites/: testsuite.cpp  testsuite.hpp
